// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel fixed renders correctly 1`] = `
<div
  className="hEUAhR"
  style={null}
>
  <div
    className="px-panel-content hsqrCV"
  />
</div>
`;

exports[`Panel renders block when visible 1`] = `
<div
  className="bNDmqe"
  style={null}
>
  <div
    className="px-panel-content hsqrCV"
  />
</div>
`;
